--- a/phpmyadmin/docker-compose.yml
+++ b/phpmyadmin/docker-compose.yml
@@ -2,7 +2,7 @@ version: '3.1'
 
 services:
   db:
-    image: mariadb:10.3
+    image: mariadb
     restart: always
     environment:
       MYSQL_ROOT_PASSWORD: notSecureChangeMe
