--- a/laravel/docker-compose.yml
+++ b/laravel/docker-compose.yml
@@ -31,7 +31,7 @@ services:
     volumes:
       - ./docker-compose/mysql:/docker-entrypoint-initdb.d
     networks:
-      - travellist
+      - mired
 
   nginx:
     image: nginx:alpine    
