--- a/laravel/docker-compose.yml
+++ b/laravel/docker-compose.yml
@@ -1,55 +1,46 @@
 version: '3.8'
 
 services:
-
-  app:
+  server:
+    image: nginx:stable-alpine
+    ports:
+      - 8000:80
+    volumes:
+      - ./src:/var/www/html
+      - ./nginx/nginx.conf:/etc/nginx/conf.d/default.conf:ro
+    depends_on:
+      - php
+      - mysql
+  php:
     build:
-      args:
-        user: laravel
-        uid: 1000
-      context: ./
-      dockerfile: Dockerfile
-    image: laravel-app
-    container_name: laravel-app
-    restart: unless-stopped
-    working_dir: /var/www/
+      context: .
+      dockerfile: dockerfiles/php.dockerfile
     volumes:
-      - /src:/var/www
-    networks:
-      - mired
-  db:
+      - ./src:/var/www/html:delegated
+
+  mysql:
     image: mysql:5.7
-    container_name: travellist-db
-    restart: unless-stopped
-    environment:
-      MYSQL_DATABASE: ${DB_DATABASE}
-      MYSQL_ROOT_PASSWORD: ${DB_PASSWORD}
-      MYSQL_PASSWORD: ${DB_PASSWORD}
-      MYSQL_USER: ${DB_USERNAME}
-      SERVICE_TAGS: dev
-      SERVICE_NAME: mysql
+    env_file:
+      - ./env/mysql.env
+
+  composer:
+    build:
+      context: ./dockerfiles
+      dockerfile: composer.dockerfile
     volumes:
-      - ./docker-compose/mysql:/docker-entrypoint-initdb.d
-    networks:
-      - mired
+      - ./src:/var/www/html
 
-  nginx:
-    image: nginx:alpine    
-    restart: unless-stopped    
-	ports:
-	  -8000:80
-	volumenes:
-	 - ./src:/var/www/html
-	 - ./nginx/nginx.conf:/etc/nginx/conf.d/default.conf:ro
-  networks:
-    - mired
+  artisan:
+    build:
+      context: .
+      dockerfile: dockerfiles/php.dockerfile
+    volumes:
+      - ./src:/var/www/html
+    entrypoint: ['php', '/var/www/html/artisan']
 
-
-
-  db:
-  #composer:
-  #artisan:
-  #npm:
-  networks:
-    - mired
-  
+  npm:
+    image: node:14-alpine
+    working_dir: /var/www/html
+    entrypoint: ['npm']
+    volumes:
+      - ./src:/var/www/html
