--- a/laravel/docker-compose.yml
+++ b/laravel/docker-compose.yml
@@ -10,7 +10,8 @@ services:
       - ./nginx/nginx.conf:/etc/nginx/conf.d/default.conf:ro
     depends_on:
       - php
-      - mysql
+      - db
+    
   php:
     build:
       context: .
@@ -18,8 +19,8 @@ services:
     volumes:
       - ./src:/var/www/html:delegated
 
-  mysql:
-    image: mysql:5.7
+  db:
+    image: mariadb:latest
     env_file:
       - ./env/mysql.env
 
