--- a/laravel/env/mysql.env
+++ b/laravel/env/mysql.env
@@ -1,5 +1,5 @@
 MYSQL_ROOT_PASSWORD=secret
-MYSQL_DATABASE=homedb
-MYSQL_USER=user_mysql
+MYSQL_DATABASE=laravel
+MYSQL_USER=laravel
 MYSQL_PASSWORD=secret
 
